# CodeGuard

./: .gitignore  AGENT_LOG.md  Dockerfile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
codeguard/: cli.py  config.py  feedback.py  governance.py  llm.py  loop.py  memory.py  tools.py  web.py
static/: index.html
tests/: conftest.py  test_cli.py  test_config.py  test_feedback.py  test_governance.py  test_llm.py  test_loop.py  test_mechanisms.py  test_memory.py  test_tools.py  test_web.py
