[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeguard"
version = "0.1.0"
description = "A coding agent harness with governance-first architecture"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "keyring>=25.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
]

[tool.setuptools.packages.find]
include = ["codeguard*"]

[project.scripts]
codeguard = "codeguard.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]